# Human-AGI-System-Prototype

./: .gitignore  CMakeLists.txt  README.md
include/: Body.h  Brain.h  Component.h  CoreBrain.h  LanguageComponent.h  VisionComponent.h  VoidBrain.h  llama.h
include/Runtime/: AGIRuntime.hpp  ActionManager.hpp  BrainManager.hpp  GoalManager.hpp  MemoryManager.hpp  SensorManager.hpp
scripts/: VoidAGI.py  VoidAGIPlaceholder.py  prompts.py  requirements.txt  retrievememory.py
src/: Body.cpp  Brain.cpp  CoreBrain.cpp  LanguageComponent.cpp  VisionComponent.cpp  VoidBrain.cpp  main.cpp  mainwindow.cpp
src/Runtime/: AGIRuntime.cpp  ActionManager.cpp  BrainManager.cpp  GoalManager.cpp  MemoryManager.cpp  SensorManager.cpp
